--- a/porto-firmandika/index.html
+++ b/porto-firmandika/index.html
@@ -6,8 +6,8 @@
   <title>Portofolio | Mochammad Firmandika Jati Kusuma</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-<!-- filepath: d:\Portofolio_Diri\porto-firmandika\public\index.html -->
-<!-- filepath: d:\Portofolio_Diri\porto-firmandika\public\index.html -->
+<!-- filepath: d:\Portofolio_Diri\porto-firmandika\index.html -->
+<!-- filepath: d:\Portofolio_Diri\porto-firmandika\index.html -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     @keyframes fadeIn {
